--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sonyericsson.zoom.ImageZoomView
-    xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:id="@+id/zoomview"
-    android:layout_width="fill_parent" 
-    android:layout_height="fill_parent" 
-    />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <com.sonyericsson.zoom.ImageZoomView
+        android:id="@+id/zoomview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+    <Button
+        android:id="@+id/zoomtype"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LongPressZoom" />
+
+</FrameLayout>
